# transformer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
examples/: data.py  data_test.py  hyperparameter.py  load_data.py  load_data_test.py  metrics.py  train.py  translate.py  translate_test.py
src/transformer/: __init__.py  attention.py  decoder.py  embedding.py  encoder.py  feed_forward.py  transformer.py  utils.py
tests/: attention_test.py  conftest.py  decoder_test.py  embedding_test.py  encoder_test.py  feed_forward_test.py  transformer_test.py
